# Rusty-BruhBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: command_manager.rs  events.rs  main.rs  player.rs  supabase_adapter.rs
