[package]
name = "rusty-bruhbot"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1.0"
songbird = "0.4"
async-recursion = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
rand = "0.8"

serenity = { version = "0.12", features = ["client", "standard_framework", "voice", "rustls_backend"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
symphonia = { features = ["mp3",], version = "0.5" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
