[package]
name = "rusty-bruhbot"
version = "1.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1.0"
songbird = "0.5"
async-recursion = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
rand = "0.9"

serenity = { version = "0.12.4", features = ["client", "standard_framework", "voice", "rustls_backend"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
symphonia = { features = ["mp3",], version = "0.5" }

[profile.release]
lto = true
strip = true
